salesforce/force-app/main/default/objects/Invoice__c/Invoice__c.object-meta.xml
<CustomObject>
    <description>Invoice header synced from the billing ledger (the ledger is the source of truth).</description>
    <label>Invoice</label>
    <nameField>
        <displayFormat>INV-{000000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>