salesforce/force-app/main/default/objects/Invoice__c/fields/Invoice_Ext_Id__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Ext_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Ledger invoice id. External ID for idempotent upserts.</description>
    <externalId>true</externalId>
    <label>Invoice Ext Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>