salesforce/force-app/main/default/objects/Invoice__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <description>Billing period, YYYY-MM (UTC).</description>
    <label>Period</label>
    <length>7</length>
    <type>Text</type>
</CustomField>