salesforce/force-app/main/default/objects/Invoice__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <description>Invoice total in USD. Ledger stores integer cents; this is cents / 100, exact.</description>
    <label>Total</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>